# quark

./: .gitignore  Cargo.toml  MISSING.md  Makefile  README.md  SSE_CONTEXT_SWITCH.md  linker.ld  x86_64-unknown-quark.json
drivers/fat32/: Cargo.toml  linker.ld
drivers/fat32/.cargo/: config.toml
drivers/fat32/src/: main.rs
drivers/vga/: Cargo.toml  linker.ld
drivers/vga/.cargo/: config.toml
drivers/vga/src/: main.rs
rootfs/etc/: passwd
rust-std-patches/: DISPATCH_POINTS.md
src/: boot.s  cap.rs  context.rs  elf.rs  fat32.rs  futex.rs  heap.rs  idt.rs  io.rs  ipc.rs  irq_dispatch.rs  main.rs  modules.rs  multiboot2.rs  nameserver.rs  paging.rs  pic.rs  pipe.rs  pit.rs  pmm.rs  scheduler.rs  serial.rs  services.rs  shmem.rs  sync.rs  syscall.rs  task.rs  userspace.rs
src/console/: framebuffer.rs  mod.rs  vga.rs
user/cat/: Cargo.toml
user/cat/src/: main.rs
user/console/: Cargo.toml
user/console/src/: font8x16.rs  main.rs
user/disk/: Cargo.toml
user/disktest/: Cargo.toml
user/echo/: Cargo.toml
user/hello/: Cargo.toml
user/httpget/: Cargo.toml
user/init/: Cargo.toml  linker.ld
user/input/: Cargo.toml
user/ipcping/: Cargo.toml
user/keyboard/: Cargo.toml  linker.ld
user/libquark/: Cargo.toml
user/login/: Cargo.toml
user/ls/: Cargo.toml
user/nameserver/: Cargo.toml
user/net/: Cargo.toml
user/ping/: Cargo.toml
user/ps/: Cargo.toml
user/quark-rt/: Cargo.toml
user/quark-rt/src/: allocator.rs  ipc.rs  lib.rs  libc.rs  rt.rs  signal.rs  syscall.rs
user/shell/: Cargo.toml
user/shutdown/: Cargo.toml
user/vfs/: Cargo.toml
(+35 files in other folders)
